Implemented LocalDB Room to store browsing history and bookmarking URLs